# white-box

./: .gitignore  AGENT.MD  DEPLOY_RAILWAY.md  LICENSE  Makefile  README.md  env.example  main.py  nixpacks.toml  pyproject.toml  requirements.txt  sitecustomize.py
apps/api/: README.md  railway.json
apps/api/src/trustai_api/: deps.py  main.py  schemas.py  settings.py
apps/api/tests/: conftest.py  test_idempotency.py  test_jobs.py  test_proofs.py  test_railway_live_smoke.py  test_settings.py  test_tariff_essential_character.py  test_tariff_gri_sequence.py  test_tariff_pack.py  test_tariff_pack_no_savings.py  test_tariff_whatif.py  test_verify_async.py  test_verify_live.py  test_verify_sync.py
apps/api/tests/fixtures/: tariff_essential_character_mismatch.json  tariff_fixture.json  tariff_fixture_no_savings.json  tariff_gri_sequence_violation.json  tariff_whatif_threshold_flip.json
apps/dashboard/: .env.example  Dockerfile  README.md  nixpacks.toml  package-lock.json  package.json  playwright.config.ts  railway.json  tsconfig.json
apps/dashboard/e2e/: dashboard.spec.ts
apps/dashboard/src/app/: layout.tsx  page.tsx
apps/dashboard/src/components/: ChatPanel.tsx  ControlBar.tsx  GraphView.tsx  IterationTimeline.tsx  MessageBubble.tsx  ModeToggle.tsx  PackSelector.tsx  ProofPanel.tsx  ThreeBackground.tsx
apps/dashboard/src/lib/: api.ts  types.ts  utils.ts
apps/dashboard/src/styles/: globals.css
apps/worker/: README.md  railway.json
apps/worker/src/trustai_worker/: __init__.py  tasks.py  worker.py
apps/worker/tests/: test_worker_task.py
docker/: api.Dockerfile  docker-compose.yml  worker.Dockerfile
docs/: benchmarks.md  duty_layers.md  evidence_grounding.md  fixtures.md  jurisdictions.md  tariff_engineering.md  tariff_pack.md
reports/dev/: TARIFF_PACK_GRI_ESSENTIAL_CHARACTER.md  TARIFF_PACK_IMPLEMENTATION_NOTES.md
scripts/: compare_benchmarks.py  live_convergence.py  live_scenarios.json  local_smoke.sh  railway_live_smoke.py  railway_smoke.py  railway_start_api.sh  railway_start_dashboard.sh  railway_start_worker.sh  record_fixture.py  record_tariff_fixture.py  replay_fixtures.py  run_benchmarks.py  run_week2_demo.py  smoke_week4.sh
storage/benchmarks/tariff/fixtures/: fixture_ch73.json  fixture_ch84.json  fixture_ch85.json  fixture_missing_evidence.json  fixture_negative.json  fixture_no_savings.json  fixture_positive.json
storage/benchmarks/tariff_ca/fixtures/: fixture_ch73.json  fixture_ch84.json  fixture_ch85.json  fixture_missing_evidence.json  fixture_no_savings.json  fixture_positive.json
storage/benchmarks/tariff_us/fixtures/: fixture_ch73.json  fixture_ch84.json  fixture_ch85.json  fixture_missing_evidence.json  fixture_negative.json  fixture_no_savings.json  fixture_positive.json
storage/packs/general/: ontology.json
storage/packs/tariff/: ontology.json
storage/packs/tariff_ca/: ontology.json
storage/packs/tariff_us/: axioms.json
(+303 files in other folders)
