[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustai-core"
version = "0.1.0"
description = "TrustAI VRP deterministic core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch",
  "pydantic",
  "orjson",
  "openai",
  "anthropic",
  "httpx",
  "tenacity",
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "alembic",
  "psycopg2-binary",
  "redis",
  "rq",
  "python-dotenv",
  "pytest",
  "pytest-asyncio",
  "hypothesis",
  "ruff",
  "mypy",
]

[tool.setuptools]
package-dir = {"" = "packages/core/src"}

[tool.setuptools.packages.find]
where = ["packages/core/src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["packages/core/tests", "apps/api/tests", "apps/worker/tests"]
pythonpath = [".", "packages/core/src", "apps/api/src", "apps/worker/src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E401", "I001"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
no_implicit_optional = true
strict_optional = true

# Make mypy able to import your packages without needing PYTHONPATH hacks
mypy_path = "packages/core/src:apps/api/src:apps/worker/src"

# Actually type-check all three codebases by default
files = [
  "packages/core/src/trustai_core",
  "apps/api/src",
  "apps/worker/src",
]

# Don’t fail on third-party libs that lack stubs / are untyped
[[tool.mypy.overrides]]
module = [
  "tenacity.*",
  "fastapi.*",
  "uvicorn.*",
  "sqlalchemy.*",
  "alembic.*",
  "redis.*",
  "rq.*",
  "psycopg2.*",
  "httpx.*",
  "openai.*",
  "anthropic.*",
  "torch.*",
  "orjson.*",
]
ignore_missing_imports = true
